--- a/config/crd/experimental/gateway.networking.k8s.io_httproutes.yaml
+++ b/config/crd/experimental/gateway.networking.k8s.io_httproutes.yaml
@@ -2824,7 +2824,10 @@ spec:
                             sent from the gateway to when the full response has been received from the backend.
 
 
-                            Specifying a zero value such as "0s" is interpreted as no timeout.
+                            Setting a timeout to the zero duration (e.g. "0s") SHOULD disable the timeout
+                            completely. Implementations that cannot completely disable the timeout MUST
+                            instead interpret the zero duration as the longest possible value to which
+                            the timeout can be set.
 
 
                             An entire client HTTP transaction with a gateway, covered by the Request timeout,
@@ -2848,7 +2851,13 @@ spec:
 
                             For example, setting the `rules.timeouts.request` field to the value `10s` in an
                             `HTTPRoute` will cause a timeout if a client request is taking longer than 10 seconds
-                            to complete. Specifying a zero value such as "0s" is interpreted as no timeout.
+                            to complete.
+
+
+                            Setting a timeout to the zero duration (e.g. "0s") SHOULD disable the timeout
+                            completely. Implementations that cannot completely disable the timeout MUST
+                            instead interpret the zero duration as the longest possible value to which
+                            the timeout can be set.
 
 
                             This timeout is intended to cover as close to the whole request-response transaction
@@ -6040,7 +6049,10 @@ spec:
                             sent from the gateway to when the full response has been received from the backend.
 
 
-                            Specifying a zero value such as "0s" is interpreted as no timeout.
+                            Setting a timeout to the zero duration (e.g. "0s") SHOULD disable the timeout
+                            completely. Implementations that cannot completely disable the timeout MUST
+                            instead interpret the zero duration as the longest possible value to which
+                            the timeout can be set.
 
 
                             An entire client HTTP transaction with a gateway, covered by the Request timeout,
@@ -6064,7 +6076,13 @@ spec:
 
                             For example, setting the `rules.timeouts.request` field to the value `10s` in an
                             `HTTPRoute` will cause a timeout if a client request is taking longer than 10 seconds
-                            to complete. Specifying a zero value such as "0s" is interpreted as no timeout.
+                            to complete.
+
+
+                            Setting a timeout to the zero duration (e.g. "0s") SHOULD disable the timeout
+                            completely. Implementations that cannot completely disable the timeout MUST
+                            instead interpret the zero duration as the longest possible value to which
+                            the timeout can be set.
 
 
                             This timeout is intended to cover as close to the whole request-response transaction
