--- a/config/crd/experimental/gateway.networking.k8s.io_gateways.yaml
+++ b/config/crd/experimental/gateway.networking.k8s.io_gateways.yaml
@@ -39,6 +39,11 @@ spec:
         description: |-
           Gateway represents an instance of a service-traffic handling infrastructure
           by binding Listeners to a set of IP addresses.
+
+
+          It is recommended that the Gateway name field be limited to a maximum length
+          of 63 characters. Gateway names may be used in label values on generated
+          in-cluster resources which have a length limit of 63 characters.
         properties:
           apiVersion:
             description: |-
