--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -80,8 +80,10 @@ nav:
         GAMMA Initiative: mesh/gamma.md
         Service Facets: mesh/service-facets.md
     - Implementations:
-        List: implementations.md
-        Comparison: implementation-table.md
+        - List: implementations.md
+        - Comparison: implementation-table-v1.1.0.md
+        - Past Version Comparisons:
+            - v1.0.0: implementation-table-v1.0.0.md
     - FAQ: faq.md
     - Glossary: concepts/glossary.md
   - Guides:
