recommend 503 status code for a service with no healthy endpoints

--- a/config/crd/standard/gateway.networking.k8s.io_httproutes.yaml
+++ b/config/crd/standard/gateway.networking.k8s.io_httproutes.yaml
@@ -433,6 +433,10 @@ spec:
                         choose how that 50 percent is determined.
 
 
+                        When a HTTPBackendRef refers to a Service that has no ready endpoints,
+                        implementations MAY return a 503 for requests to that backend instead.
+
+
                         Support: Core for Kubernetes Service
 
 
@@ -3441,6 +3445,10 @@ spec:
                         For example, if two backends are specified with equal weights, and one is
                         invalid, 50 percent of traffic must receive a 500. Implementations may
                         choose how that 50 percent is determined.
+
+
+                        When a HTTPBackendRef refers to a Service that has no ready endpoints,
+                        implementations MAY return a 503 for requests to that backend instead.
 
 
                         Support: Core for Kubernetes Service
