add missing matches
Signed-off-by: spacewander <spacewanderlzx@gmail.com>

--- a/examples/standard/http-redirect-rewrite/httproute-rewrite-prefix-path.yaml
+++ b/examples/standard/http-redirect-rewrite/httproute-rewrite-prefix-path.yaml
@@ -8,7 +8,11 @@ spec:
   hostnames:
     - rewrite.example
   rules:
-    - filters:
+    - matches:
+        - path:
+            type: PathPrefix
+            value: /cardamom
+      filters:
         - type: URLRewrite
           urlRewrite:
             hostname: elsewhere.example
