--- a/config/crd/experimental/gateway.networking.k8s.io_httproutes.yaml
+++ b/config/crd/experimental/gateway.networking.k8s.io_httproutes.yaml
@@ -463,7 +463,7 @@ spec:
 
 
                         When a HTTPBackendRef refers to a Service that has no ready endpoints,
-                        implementations MAY return a 503 for requests to that backend instead.
+                        implementations SHOULD return a 503 for requests to that backend instead.
 
 
                         Support: Core for Kubernetes Service
@@ -3692,7 +3692,7 @@ spec:
 
 
                         When a HTTPBackendRef refers to a Service that has no ready endpoints,
-                        implementations MAY return a 503 for requests to that backend instead.
+                        implementations SHOULD return a 503 for requests to that backend instead.
 
 
                         Support: Core for Kubernetes Service
