--- a/config/crd/standard/gateway.networking.k8s.io_httproutes.yaml
+++ b/config/crd/standard/gateway.networking.k8s.io_httproutes.yaml
@@ -434,7 +434,7 @@ spec:
 
 
                         When a HTTPBackendRef refers to a Service that has no ready endpoints,
-                        implementations MAY return a 503 for requests to that backend instead.
+                        implementations SHOULD return a 503 for requests to that backend instead.
 
 
                         Support: Core for Kubernetes Service
@@ -3448,7 +3448,7 @@ spec:
 
 
                         When a HTTPBackendRef refers to a Service that has no ready endpoints,
-                        implementations MAY return a 503 for requests to that backend instead.
+                        implementations SHOULD return a 503 for requests to that backend instead.
 
 
                         Support: Core for Kubernetes Service
