--- a/conformance/tests/httproute-backend-request-redirect.yaml
+++ b/conformance/tests/httproute-backend-request-redirect.yaml
@@ -1,7 +1,7 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  name: filter-request-redirect
+  name: backend-request-redirect
   namespace: gateway-conformance-infra
 spec:
   parentRefs:
@@ -15,16 +15,18 @@ spec:
     - name: infra-backend-v1
       port: 8080
       filters:
-      - type: FilterRequestRedirect
-        filterRequestRedirect:
+      - type: RequestRedirect
+        requestRedirect:
           scheme: https
-          hostname: gateway-api.sigs.k8s.io
+          hostname: redirect-example.com
           port: 443
+          statusCode: 302
     - name: infra-backend-v2
       port: 8080
       filters:
-      - type: FilterRequestRedirect
-        filterRequestRedirect:
+      - type: RequestRedirect
+        requestRedirect:
           scheme: http
-          hostname: www.redirect-example.com
+          hostname: redirect-example.com
           port: 80
+          statusCode: 301
