--- a/config/crd/experimental/gateway.networking.k8s.io_httproutes.yaml
+++ b/config/crd/experimental/gateway.networking.k8s.io_httproutes.yaml
@@ -464,6 +464,8 @@ spec:
 
                         When a HTTPBackendRef refers to a Service that has no ready endpoints,
                         implementations SHOULD return a 503 for requests to that backend instead.
+                        If and implementation chooses to do this, all of the above rules for 500 responses
+                        MUST also apply.
 
 
                         Support: Core for Kubernetes Service
@@ -3693,6 +3695,8 @@ spec:
 
                         When a HTTPBackendRef refers to a Service that has no ready endpoints,
                         implementations SHOULD return a 503 for requests to that backend instead.
+                        If and implementation chooses to do this, all of the above rules for 500 responses
+                        MUST also apply.
 
 
                         Support: Core for Kubernetes Service
