--- a/config/crd/standard/gateway.networking.k8s.io_httproutes.yaml
+++ b/config/crd/standard/gateway.networking.k8s.io_httproutes.yaml
@@ -435,8 +435,8 @@ spec:
 
                         When a HTTPBackendRef refers to a Service that has no ready endpoints,
                         implementations SHOULD return a 503 for requests to that backend instead.
-                        If and implementation chooses to do this, all of the above rules for 500 responses
-                        MUST also apply.
+                        If an implementation chooses to do this, all of the above rules for 500 responses
+                        MUST also apply for responses that return a 503.
 
 
                         Support: Core for Kubernetes Service
@@ -3451,8 +3451,8 @@ spec:
 
                         When a HTTPBackendRef refers to a Service that has no ready endpoints,
                         implementations SHOULD return a 503 for requests to that backend instead.
-                        If and implementation chooses to do this, all of the above rules for 500 responses
-                        MUST also apply.
+                        If an implementation chooses to do this, all of the above rules for 500 responses
+                        MUST also apply for responses that return a 503.
 
 
                         Support: Core for Kubernetes Service
