--- a/config/crd/standard/gateway.networking.k8s.io_httproutes.yaml
+++ b/config/crd/standard/gateway.networking.k8s.io_httproutes.yaml
@@ -2728,6 +2728,10 @@ spec:
                       != ''PathPrefix'') ? false : true) : true'
                 maxItems: 16
                 type: array
+                x-kubernetes-validations:
+                - message: While 16 rules and 64 matches are allowed, the total matches
+                    must be less than 256
+                  rule: self.map(r, r.matches.size()).sum() < 256
             type: object
           status:
             description: Status defines the current state of HTTPRoute.
@@ -5744,6 +5748,10 @@ spec:
                       != ''PathPrefix'') ? false : true) : true'
                 maxItems: 16
                 type: array
+                x-kubernetes-validations:
+                - message: While 16 rules and 64 matches are allowed, the total matches
+                    must be less than 256
+                  rule: self.map(r, r.matches.size()).sum() < 256
             type: object
           status:
             description: Status defines the current state of HTTPRoute.
