--- a/conformance/tests/gateway-modify-listeners.yaml
+++ b/conformance/tests/gateway-modify-listeners.yaml
@@ -46,7 +46,7 @@ spec:
   - name: https
     port: 443
     protocol: HTTPS
-    hostname: "secure.test.com"
+    hostname: "other-secure.test.com"
     allowedRoutes:
       namespaces:
         from: All
