update connection error and timeout, add warning
- change connection error and backend timeout retry from MUST to SHOULD
- add conformance flags for connection errors and backend timeouts
- add UNRESOLVED warning

--- a/geps/gep-1731/metadata.yaml
+++ b/geps/gep-1731/metadata.yaml
@@ -36,9 +36,11 @@ references:
 # are any. This will allow us to track which feature was introduced by which GEP.
 featureNames:
   - SupportHTTPRouteRetry
+  - SupportHTTPRouteRetryBackendTimeout
   - SupportHTTPRouteRetryBackoff
   - SupportHTTPRouteRetryCodes
   - SupportHTTPRouteRetryCodes5xx
+  - SupportHTTPRouteRetryConnectionError
 # changelog is a list of hyperlinks to PRs that make changes to the GEP, in
 # ascending date order.
 changelog: {}
