Validation for label keys and values according to Kubernetes specification
Signed-off-by: Norwin Schnyder <norwin.schnyder+github@gmail.com>

--- a/config/crd/experimental/gateway.networking.k8s.io_gateways.yaml
+++ b/config/crd/experimental/gateway.networking.k8s.io_gateways.yaml
@@ -180,15 +180,31 @@ spec:
                       Support: Extended
                     maxProperties: 8
                     type: object
+                    x-kubernetes-validations:
+                    - message: Annotation keys must be in the form of an optional
+                        DNS subdomain prefix followed by a required name segment of
+                        up to 63 characters.
+                      rule: self.all(key, key.matches(r"""^([a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*/)?([A-Za-z0-9][-A-Za-z0-9_.]{0,61})?[A-Za-z0-9]$"""))
                   labels:
                     additionalProperties:
                       description: |-
-                        AnnotationValue is the value of an annotation in Gateway API. This is used
-                        for validation of maps such as TLS options. This roughly matches Kubernetes
-                        annotation validation, although the length validation in that case is based
-                        on the entire size of the annotations struct.
-                      maxLength: 4096
+                        LabelValue is the value of a label in the Gateway API. This is used for validation
+                        of maps such as Gateway infrastructure labels. This matches the Kubernetes
+                        label validation rules:
+                        * must be 63 characters or less (can be empty),
+                        * unless empty, must begin and end with an alphanumeric character ([a-z0-9A-Z]),
+                        * could contain dashes (-), underscores (_), dots (.), and alphanumerics between.
+
+
+                        Valid values include:
+
+
+                        * MyValue
+                        * my.name
+                        * 123-my-value
+                      maxLength: 63
                       minLength: 0
+                      pattern: ^(([A-Za-z0-9][-A-Za-z0-9_.]*)?[A-Za-z0-9])?$
                       type: string
                     description: |-
                       Labels that SHOULD be applied to any resources created in response to this Gateway.
@@ -204,6 +220,10 @@ spec:
                       Support: Extended
                     maxProperties: 8
                     type: object
+                    x-kubernetes-validations:
+                    - message: Label keys must be in the form of an optional DNS subdomain
+                        prefix followed by a required name segment of up to 63 characters.
+                      rule: self.all(key, key.matches(r"""^([a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*/)?([A-Za-z0-9][-A-Za-z0-9_.]{0,61})?[A-Za-z0-9]$"""))
                   parametersRef:
                     description: |-
                       ParametersRef is a reference to a resource that contains the configuration
@@ -1407,15 +1427,31 @@ spec:
                       Support: Extended
                     maxProperties: 8
                     type: object
+                    x-kubernetes-validations:
+                    - message: Annotation keys must be in the form of an optional
+                        DNS subdomain prefix followed by a required name segment of
+                        up to 63 characters.
+                      rule: self.all(key, key.matches(r"""^([a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*/)?([A-Za-z0-9][-A-Za-z0-9_.]{0,61})?[A-Za-z0-9]$"""))
                   labels:
                     additionalProperties:
                       description: |-
-                        AnnotationValue is the value of an annotation in Gateway API. This is used
-                        for validation of maps such as TLS options. This roughly matches Kubernetes
-                        annotation validation, although the length validation in that case is based
-                        on the entire size of the annotations struct.
-                      maxLength: 4096
+                        LabelValue is the value of a label in the Gateway API. This is used for validation
+                        of maps such as Gateway infrastructure labels. This matches the Kubernetes
+                        label validation rules:
+                        * must be 63 characters or less (can be empty),
+                        * unless empty, must begin and end with an alphanumeric character ([a-z0-9A-Z]),
+                        * could contain dashes (-), underscores (_), dots (.), and alphanumerics between.
+
+
+                        Valid values include:
+
+
+                        * MyValue
+                        * my.name
+                        * 123-my-value
+                      maxLength: 63
                       minLength: 0
+                      pattern: ^(([A-Za-z0-9][-A-Za-z0-9_.]*)?[A-Za-z0-9])?$
                       type: string
                     description: |-
                       Labels that SHOULD be applied to any resources created in response to this Gateway.
@@ -1431,6 +1467,10 @@ spec:
                       Support: Extended
                     maxProperties: 8
                     type: object
+                    x-kubernetes-validations:
+                    - message: Label keys must be in the form of an optional DNS subdomain
+                        prefix followed by a required name segment of up to 63 characters.
+                      rule: self.all(key, key.matches(r"""^([a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*/)?([A-Za-z0-9][-A-Za-z0-9_.]{0,61})?[A-Za-z0-9]$"""))
                   parametersRef:
                     description: |-
                       ParametersRef is a reference to a resource that contains the configuration
