Validate prefix length of DNS subdomain in label and anootaion keys
Signed-off-by: Norwin Schnyder <norwin.schnyder+github@gmail.com>

--- a/config/crd/experimental/gateway.networking.k8s.io_gateways.yaml
+++ b/config/crd/experimental/gateway.networking.k8s.io_gateways.yaml
@@ -185,6 +185,9 @@ spec:
                         DNS subdomain prefix followed by a required name segment of
                         up to 63 characters.
                       rule: self.all(key, key.matches(r"""^([a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*/)?([A-Za-z0-9][-A-Za-z0-9_.]{0,61})?[A-Za-z0-9]$"""))
+                    - message: If specified, the annotation key's prefix must be a
+                        DNS subdomain not longer than 253 characters in total.
+                      rule: self.all(key, key.split("/")[0].size() < 253)
                   labels:
                     additionalProperties:
                       description: |-
@@ -224,6 +227,9 @@ spec:
                     - message: Label keys must be in the form of an optional DNS subdomain
                         prefix followed by a required name segment of up to 63 characters.
                       rule: self.all(key, key.matches(r"""^([a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*/)?([A-Za-z0-9][-A-Za-z0-9_.]{0,61})?[A-Za-z0-9]$"""))
+                    - message: If specified, the label key's prefix must be a DNS
+                        subdomain not longer than 253 characters in total.
+                      rule: self.all(key, key.split("/")[0].size() < 253)
                   parametersRef:
                     description: |-
                       ParametersRef is a reference to a resource that contains the configuration
@@ -1432,6 +1438,9 @@ spec:
                         DNS subdomain prefix followed by a required name segment of
                         up to 63 characters.
                       rule: self.all(key, key.matches(r"""^([a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*/)?([A-Za-z0-9][-A-Za-z0-9_.]{0,61})?[A-Za-z0-9]$"""))
+                    - message: If specified, the annotation key's prefix must be a
+                        DNS subdomain not longer than 253 characters in total.
+                      rule: self.all(key, key.split("/")[0].size() < 253)
                   labels:
                     additionalProperties:
                       description: |-
@@ -1471,6 +1480,9 @@ spec:
                     - message: Label keys must be in the form of an optional DNS subdomain
                         prefix followed by a required name segment of up to 63 characters.
                       rule: self.all(key, key.matches(r"""^([a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*/)?([A-Za-z0-9][-A-Za-z0-9_.]{0,61})?[A-Za-z0-9]$"""))
+                    - message: If specified, the label key's prefix must be a DNS
+                        subdomain not longer than 253 characters in total.
+                      rule: self.all(key, key.split("/")[0].size() < 253)
                   parametersRef:
                     description: |-
                       ParametersRef is a reference to a resource that contains the configuration
